# infsch-polymorphism

./: .gitignore  CMakeLists.txt  solidtest.cpp
Figures/: plane.h  point.h
Figures/Shapes/: CMakeLists.txt  circle.cpp  circle.h  parallelogram.cpp  parallelogram.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  shape.h  shapes.h  square.cpp  square.h
Figures/Solids/: CMakeLists.txt  cone.h  cube.h  cylinder.cpp  cylinder.h  parallelepiped.cpp  parallelepiped.h  prism.h  rect_parallelepiped.h  solid.h  solids.h  sphere.cpp  sphere.h
kr2020-inherit3/: CMakeLists.txt  Social.cpp  Social.h  Vector.h  main.cpp
